--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,19 +1,9 @@
-<html>
-	<head>
-    {% if title %}
-		  <title>{{ title }}</title>
-    {% else %}
-      <title>Mi primera aplicación web</title>
-    {% endif %}
-	</head>
+{% extends "base.html" %}
 
-	<body>
-		<h1>Hola, {{ user.nickname }}</h1>
-
-    {% for message in messages %}
-      <div>
-        <p><b>{{ message.author.nickname }} dice:</b> {{ message.body }}</p>
-      </div>
-    {% endfor %}
-	</body>
-</html>
+{% block content %}
+  {% for message in messages %}
+    <div>
+      <p><b>{{ message.author.nickname }} dice:</b> {{ message.body }}</p>
+    </div>
+  {% endfor %}
+{% endblock %}
