--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,9 @@
     {% else %}
       <title>Mi primera aplicación web</title>
     {% endif %}
+
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <script src="/static/js/bootstrap.js"></script>
 	</head>
 
 	<body>
